# secp256k1_play

./: CMakeLists.txt  main.cpp
hash-library/: keccak.cpp
